--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,28 +1,35 @@
 <html>
-  <head>
-    <style>
-     body {
-      color: yellow;
-      text-align: center;
-      }
-    </style>
-  </head>
+<head>
+  <style>
+   body {
+    color: grey;
+    text-align: center;
+    }
+  </style>
+</head>
+  {% block title %}Home{% endblock %}
   <body>
-    <h1>Hello, {{core.username|default:'Guest' }}</h1>
-
-    <p> Welcome to the Our site</p>
+    <h1>Hello, {{user.username}}!</h1>
+    {%if user.is_authenticated %}
     <div>
-      {%if core.is_authenticated %}
-         <a href="{%url 'logout' %}">
+       <a href="{% url 'login' %}">
+         <button>Create Post</button>
+       </a>
+      
+         <a href="{% url 'logout' %}">
          <button>Logout</button>
        </a>
+      
+    </div>
 
       {% else %}
-         <a href="{%url 'signup' %}">
+         <p> Please LogIn or SingUp First </p>
+         <a href="{% url 'core:signup' %}">
           <button>Sign Up</button>
-         </a>
-         <a href="{% url 'login'%}">
+         </a><br>
+         <br><a href="{% url 'login' %}">
          <button>LogIn</button>
+
          </a>
       {% endif %}
     </div>
