--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -1,5 +1,3 @@
-{% block title %}Login{% endblock %}
-
 {% block content %}
   <h2>Login</h2>
 
@@ -9,8 +7,11 @@
         {{ form.as_p }}
         <tr>
           <td>&nbsp;</td>
-          <td><input type='submit' vakue='Submit'></td>
+          <td><input type='submit' value='Login'></td>
         </tr>
       </table>
     </form>
+    <a href="{% url 'core:signup' %}">
+    <button>Sign Up</button>
+         </a>
 {% endblock %}
