--- a/mysite/templates/core/signup.html
+++ b/mysite/templates/core/signup.html
@@ -8,8 +8,8 @@
     <br><input type="submit" value="Register">
 </form>
 
-<a href="{% url 'login' %}">
+<a href="{% url 'core:login' %}">
 <button>Back to login</button></a>
-<a href="{% url 'home' %}">
+<a href="{% url 'core:home' %}">
 <button>Back to Home</button></a>
 {% endblock %}
