--- a/mysite/templates/core/image.html
+++ b/mysite/templates/core/image.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'core/base.html' %}
 
 {% block content %}
   <form method="post" enctype="multipart/form-data">
